--- a/css/signuppage.css
+++ b/css/signuppage.css
@@ -1,80 +1,96 @@
 body {
-	padding: 0;
-	margin: 0;
-	background: #ffffff;
+	  padding: 0;
+	  margin: 0;
+	  background: #fff;
 }
 
 /* @extend display-flex; */
-display-flex, .display-flex, .display-flex-center {
-    display: flex;
-    display: -webkit-flex; }
-  
-  /* @extend list-type-ulli; */
-  list-type-ulli {
+.display-flex, .display-flex-center {
+     display: flex;
+     display: -webkit-flex; 
+}
+/* @extend list-type-ulli; */
+list-type-ulli {
     list-style-type: none;
     margin: 0;
-    padding: 0; }
+    padding: 0; 
+}
   
-  a:focus, a:active {
+a:focus,
+a:active {
     text-decoration: none;
     outline: none;
     transition: all 300ms ease 0s;
     -moz-transition: all 300ms ease 0s;
     -webkit-transition: all 300ms ease 0s;
     -o-transition: all 300ms ease 0s;
-    -ms-transition: all 300ms ease 0s; }
+    -ms-transition: all 300ms ease 0s; 
+}
   
-  input, select, textarea {
+input, 
+select, 
+textarea {
     outline: none;
-    appearance: unset !important;
-    -moz-appearance: unset !important;
-    -webkit-appearance: unset !important;
-    -o-appearance: unset !important;
-    -ms-appearance: unset !important; }
+    appearance: unset;
+    -moz-appearance: unset;
+    -webkit-appearance: unset;
+    -o-appearance: unset;
+    -ms-appearance: unset;
+}
   
-  input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
-    appearance: none !important;
-    -moz-appearance: none !important;
-    -webkit-appearance: none !important;
-    -o-appearance: none !important;
-    -ms-appearance: none !important;
-    margin: 0; }
+input::-webkit-outer-spin-button, 
+input::-webkit-inner-spin-button {
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    -o-appearance: none;
+    -ms-appearance: none;
+    margin: 0; 
+}
   
-  input:focus, select:focus, textarea:focus {
+input:focus, 
+select:focus, 
+textarea:focus {
     outline: none;
-    box-shadow: none !important;
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-    -o-box-shadow: none !important;
-    -ms-box-shadow: none !important; }
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    -o-box-shadow: none;
+    -ms-box-shadow: none; 
+}
   
-  input[type=checkbox] {
-    appearance: checkbox !important;
-    -moz-appearance: checkbox !important;
-    -webkit-appearance: checkbox !important;
-    -o-appearance: checkbox !important;
-    -ms-appearance: checkbox !important; }
+input[type=checkbox] {
+    appearance: checkbox;
+    -moz-appearance: checkbox;
+    -webkit-appearance: checkbox;
+    -o-appearance: checkbox;
+    -ms-appearance: checkbox;
+}
   
-  input[type=radio] {
-    appearance: radio !important;
-    -moz-appearance: radio !important;
-    -webkit-appearance: radio !important;
-    -o-appearance: radio !important;
-    -ms-appearance: radio !important; }
+input[type=radio] {
+    appearance: radio;
+    -moz-appearance: radio;
+    -webkit-appearance: radio;
+    -o-appearance: radio;
+    -ms-appearance: radio;
+}
   
-  img {
+img {
     max-width: 100%;
-    height: auto; }
+    height: auto; 
+}
   
-  figure {
-    margin: 0; }
+figure {
+    margin: 0; 
+}
   
-  p {
+p {
     margin-bottom: 0px;
     font-size: 15px;
-    color: #777; }
+    color: #777; 
+}
   
-  h2 {
+h2 {
     line-height: 1.66;
     margin: 0;
     padding: 0;
@@ -84,12 +100,14 @@ display-flex, .display-flex, .display-flex-center {
     font-size: 24px;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 40px; }
+    margin-bottom: 40px; 
+}
   
-  .clear {
-    clear: both; }
+.clear {
+    clear: both; 
+}
   
-  body {
+body {
     font-size: 14px;
     line-height: 1.8;
     color: #222;
@@ -101,14 +119,16 @@ display-flex, .display-flex, .display-flex-center {
     -o-background-size: cover;
     -ms-background-size: cover;
     background-position: center center;
-    padding: 115px 0; }
+    padding: 115px 0; 
+}
   
-  .container {
+.container {
     width: 660px;
     position: relative;
-    margin: 0 auto; }
+    margin: 0 auto; 
+}
   
-  .display-flex {
+.display-flex {
     justify-content: space-between;
     -moz-justify-content: space-between;
     -webkit-justify-content: space-between;
@@ -118,9 +138,10 @@ display-flex, .display-flex, .display-flex-center {
     -moz-align-items: center;
     -webkit-align-items: center;
     -o-align-items: center;
-    -ms-align-items: center; }
+    -ms-align-items: center; 
+}
   
-  .display-flex-center {
+.display-flex-center {
     justify-content: center;
     -moz-justify-content: center;
     -webkit-justify-content: center;
@@ -130,9 +151,10 @@ display-flex, .display-flex, .display-flex-center {
     -moz-align-items: center;
     -webkit-align-items: center;
     -o-align-items: center;
-    -ms-align-items: center; }
+    -ms-align-items: center; 
+}
   
-  .position-center {
+.position-center {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -140,22 +162,24 @@ display-flex, .display-flex, .display-flex-center {
     -moz-transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%); }
+    -ms-transform: translate(-50%, -50%); 
+}
   
-  .signup-content {
+.signup-content {
     background: #fff;
     border-radius: 10px;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     -o-border-radius: 10px;
     -ms-border-radius: 10px;
-    padding: 50px 85px; }
+    padding: 50px 85px; 
+}
   
-  .form-group {
+.form-group {
     overflow: hidden;
     margin-bottom: 20px; }
   
-  .form-input {
+.form-input {
     width: 100%;
     border: 1px solid #ebebeb;
     border-radius: 5px;
@@ -188,6 +212,7 @@ display-flex, .display-flex, .display-flex-center {
       border: 1px solid transparent;
       -webkit-border-image-source: -webkit-linear-gradient(to right, #9face6, #74ebd5);
       -moz-border-image-source: -moz-linear-gradient(to right, #9face6, #74ebd5);
+      -webkit-border-image-source: -webkit-gradient(to right, #9face6, #74ebd5);
       -o-border-image-source: -o-linear-gradient(to right, #9face6, #74ebd5);
       border-image-source: linear-gradient(to right, #9face6, #74ebd5);
       -webkit-border-image-slice: 1;
@@ -208,7 +233,7 @@ display-flex, .display-flex, .display-flex-center {
       .form-input:focus:-moz-placeholder {
         color: #222; }
   
-  .form-submit {
+.form-submit {
     width: 100%;
     border-radius: 5px;
     -moz-border-radius: 5px;
@@ -226,21 +251,25 @@ display-flex, .display-flex, .display-flex-center {
     background-image: -ms-linear-gradient(to left, #61d4bf, #26752b);
     background-image: -o-linear-gradient(to left, #61d4bf, #26752b);
     background-image: -webkit-linear-gradient(to left, #61d4bf, #26752b);
-    background-image: linear-gradient(to left, #61d4bf, #26752b); }
+    background-image: -webkit-gradient(to left, #61d4bf, #26752b);
+    background-image: linear-gradient(to left, #61d4bf, #26752b); 
+}
   
-  input[type=checkbox]:not(old) {
+input[type=checkbox]:not(old) {
     width: 2em;
     margin: 0;
     padding: 0;
     font-size: 1em;
-    display: none; }
+    display: none; 
+}
   
-  input[type=checkbox]:not(old) + label {
+input[type=checkbox]:not(old) + label {
     display: inline-block;
     margin-top: 7px;
-    margin-bottom: 25px; }
+    margin-bottom: 25px; 
+}
   
-  input[type=checkbox]:not(old) + label > span {
+input[type=checkbox]:not(old) + label > span {
     display: inline-block;
     width: 13px;
     height: 13px;
@@ -257,17 +286,21 @@ display-flex, .display-flex, .display-flex-center {
     background-image: -ms-linear-gradient(white, white);
     background-image: -o-linear-gradient(white, white);
     background-image: -webkit-linear-gradient(white, white);
+    background-image: -webkit-gradient(white, white);
     background-image: linear-gradient(white, white);
-    vertical-align: bottom; }
+    vertical-align: bottom; 
+}
   
-  input[type=checkbox]:not(old):checked + label > span {
+input[type=checkbox]:not(old):checked + label > span {
     background-image: -moz-linear-gradient(white, white);
     background-image: -ms-linear-gradient(white, white);
     background-image: -o-linear-gradient(white, white);
     background-image: -webkit-linear-gradient(white, white);
-    background-image: linear-gradient(white, white); }
+    background-image: -webkit-gradient(white, white);
+    background-image: linear-gradient(white, white); 
+}
   
-  input[type=checkbox]:not(old):checked + label > span:before {
+input[type=checkbox]:not(old):checked + label > span:before {
     content: '\f26b';
     display: block;
     color: #222;
@@ -275,34 +308,40 @@ display-flex, .display-flex, .display-flex-center {
     line-height: 1.2;
     text-align: center;
     font-family: 'Material-Design-Iconic-Font';
-    font-weight: bold; }
+    font-weight: bold; 
+}
   
-  .label-agree-term {
+.label-agree-term {
     font-size: 12px;
     font-weight: 600;
-    color: #555; }
+    color: #555; 
+}
   
-  .term-service {
-    color: #555; }
+.term-service {
+    color: #555; 
+}
   
-  .loginhere {
+.loginhere {
     color: #555;
     font-weight: 500;
     text-align: center;
     margin-top: 50px;
-    margin-bottom: 5px; }
+    margin-bottom: 5px; 
+}
   
-  .loginhere-link {
+.loginhere-link {
     font-weight: 700;
-    color: #222; }
+    color: #222; 
+}
   
-  .field-icon {
+.field-icon {
     float: right;
     margin-right: 17px;
     margin-top: -32px;
     position: relative;
     z-index: 2;
-    color: #555; }
+    color: #555; 
+}
   
   @media screen and (max-width: 768px) {
     .container {
